# QtHomeW

./: .gitignore  Приложение Б. Матрица проверки требований.docx
CourseProject/: CMakeLists.txt  database.cpp  database.h  graph.cpp  graph.h  graph.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytimer.cpp  mytimer.h  qcustbarchart.cpp  qcustbarchart.h  qcustgraph.cpp  qcustgraph.h
EightHW8DB/: database.cpp  database.h  dbdata.ui  mainwindow.cpp  mainwindow.h
EightHW8DBSqlQueryModel/: database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
FifthHW5/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
FourthHW4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
NinthHW9UdpSocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
SecondHW2/: CMakeLists.txt  main.cpp
SevensHW7Charts/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
SixHW6/: mainwindow.cpp  mainwindow.ui
SixHW6Concurrent/: CMakeLists.txt  mainwindow.cpp
TenthHW10TCPClient/: mainwindow.cpp  tcpclient.cpp
ThirdHW3/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
